# seher

./: .gitignore  CLAUDE.md  LICENSE  README.md  collaboration_stats.sh  pyproject.toml
examples/: policy_gradient_on_lqr.py
examples/dmc/: parameters.py  policy_search.py
examples/dmc/results/: policy-search-CartpoleBalance.txt  policy-search-WalkerWalk.txt
examples/tune-actor-critic/: run.py
examples/tune-ars-mpc/: run.py
src/scripts/: benchmark.py
src/seher/: __init__.py  apx_arch.py  ars.py  grad_util.py  jax_util.py  score_function.py  simulate.py  types.py  ui.py
src/seher/control/: __init__.py  basic_policies.py  chunk_transcription_planner.py  mpc.py  solvers.py  stepper_planner.py  tanh_gaussian_policy_mdp.py  td_lambda.py
src/seher/control/policy_search/: __init__.py  actor_critic.py  base.py  monte_carlo.py  policy_gradient.py
src/seher/stepper/: __init__.py  chunk_transcription.py  mppi.py  optax.py
src/seher/systems/: __init__.py  lqr.py  mujoco_playground.py  pendulum.py
tests/: __init__.py
tests/integration/: test_mpc_on_mdp.py
tests/seher/: test_ui.py
tests/seher/control/: test_actor_critic.py  test_callbacks.py  test_chunk_transcription.py  test_gaussian_policy_mdp.py  test_mppi.py  test_policy_gradient.py  test_policy_search.py
tests/seher/stepper/: test_optimizers.py
tests/seher/systems/: __init__.py  test_lqr.py  test_mujoco_playground.py
